<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:background="@drawable/personinfobackgroud">

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="200dp"
        android:layout_height="196dp"
        android:src="@drawable/ic_app"
        android:layout_marginTop="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:fontFamily="@font/lufga_bold"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applogo" />

    <TextView
        android:id="@+id/appdescription1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description1"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/lufga_bold"
        android:layout_marginTop="49dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appname" />

    <TextView
        android:id="@+id/appdescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description2"
        android:textColor="@color/login_text"
        android:textSize="12sp"
        android:fontFamily="@font/lufga_light"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appdescription1" />

    <TextView
        android:id="@+id/appdescription3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description3"
        android:textColor="@color/login_text"
        android:textSize="12sp"
        android:fontFamily="@font/lufga_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appdescription2" />

    <LinearLayout
        android:id="@+id/loginframe"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appdescription3"
        app:layout_constraintBottom_toTopOf="@id/signupframe">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/account_login"
            android:textColor="@color/login_text"
            android:textSize="12sp"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/lufga_light"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingTop="8dp"
            android:paddingStart="12dp"
            android:paddingBottom="7dp"
            android:fontFamily="@font/lufga_light"
            android:textColor="@color/white"
            android:textColorHint="@color/login_text"
            android:hint="@string/prompt_account"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/login_frame"
            android:selectAllOnFocus="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/login_text">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingTop="7dp"
                android:paddingStart="12dp"
                android:hint="@string/prompt_password"
                android:fontFamily="@font/lufga_light"
                android:textColor="@color/white"
                android:textColorHint="@color/login_text"
                android:background="@drawable/bg_radius_8dp"
                android:backgroundTint="@color/login_frame"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/forget_password_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/forgot_password"
                android:textSize="14sp"
                android:background="@color/transparent"
                android:fontFamily="@font/lufga_light"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signupframe"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginframe"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:enabled="false"
            android:text="@string/action_log_in"
            android:textColor="@color/login_button_text"
            android:textSize="20sp"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/login_button_background"
            android:fontFamily="@font/lufga_bold"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/action_sign_up"
            android:textColor="@color/signup_button_text"
            android:textSize="20sp"
            android:background="@drawable/bg_broder"
            android:fontFamily="@font/lufga_bold"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
