<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:background="@drawable/personinfobackgroud">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_marginTop="95dp"
        android:layout_width="200dp"
        android:layout_height="196dp"
        android:src="@drawable/ic_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:fontFamily="@font/lufga_bold"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RelativeLayout
        android:id="@+id/appdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/appdescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lufga_bold"
            android:text="@string/app_description4"
            android:textColor="@color/login_text"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/appdescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lufga_bold"
            android:text="@string/app_description5"
            android:textColor="@color/login_text"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_below="@id/appdescription1" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_info_form"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/appdescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/user_account"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="7dp"
            android:paddingStart="12dp"
            android:paddingBottom="8dp"
            android:fontFamily="@font/lufga_light"
            android:textColor="@color/white"
            android:textColorHint="@color/login_text"
            android:textSize="14sp"
            android:hint="@string/prompt_account"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/login_frame"
            android:selectAllOnFocus="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_password_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/login_text"
            android:layout_below="@id/user_account">

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingTop="7dp"
                android:paddingStart="12dp"
                android:paddingBottom="8dp"
                android:hint="@string/prompt_password"
                android:fontFamily="@font/lufga_light"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/login_text"
                android:background="@drawable/bg_radius_8dp"
                android:backgroundTint="@color/login_frame"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="7dp"
            android:paddingStart="12dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lufga_light"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textColorHint="@color/login_text"
            android:hint="@string/prompt_user_name"
            android:inputType="textCapSentences"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/login_frame"
            android:selectAllOnFocus="true"
            android:layout_below="@id/user_password_column"
            android:autofillHints="username"/>

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="7dp"
            android:paddingStart="12dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lufga_light"
            android:textColor="@color/white"
            android:textColorHint="@color/login_text"
            android:textSize="14sp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/login_frame"
            android:selectAllOnFocus="true"
            android:layout_below="@id/user_name"/>

        <EditText
            android:id="@+id/user_phone_number"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="7dp"
            android:paddingStart="12dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lufga_light"
            android:textColor="@color/white"
            android:textColorHint="@color/login_text"
            android:textSize="14dp"
            android:hint="@string/prompt_phone_number"
            android:inputType="phone"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/login_frame"
            android:selectAllOnFocus="true"
            android:layout_below="@id/user_email"/>

        <Spinner
            android:id="@+id/user_identity"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="49dp"
            android:paddingTop="7dp"
            android:paddingStart="12dp"
            android:paddingBottom="8dp"
            android:prompt="@string/prompt_select_option"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/login_frame"
            android:layout_below="@id/user_phone_number"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/action_sign_up"
            android:textColor="@color/sign_up_button_text"
            android:textSize="20sp"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/sign_up_button_background"
            android:fontFamily="@font/lufga_bold"
            android:textAllCaps="false"
            android:layout_below="@id/user_identity"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
