<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rentrecord.RentRecordFragment"
    android:background="@drawable/personinfobackgroud">

    <!-- 返回按钮 -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gobackbutton"
        android:layout_width="16.5dp"
        android:layout_height="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginStart="27dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="345dp"
        android:layout_height="match_parent"
        android:layout_below="@id/gobackbutton"
        android:layout_marginTop="13dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <include
            android:id="@+id/personinfobutton"
            layout="@layout/componet_person_info_button" />

        <LinearLayout
            android:id="@+id/changepagebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal"
            android:paddingStart="11dp"
            android:paddingEnd="11dp">

            <Button
                android:id="@+id/profileButton"
                android:layout_width="91dp"
                android:layout_height="35dp"
                android:background="@drawable/bg_radius_8dp"
                android:backgroundTint="@color/nonchosen_button_background"
                android:fontFamily="@font/lufga_bold"
                android:text="@string/profile_button_text"
                android:textAllCaps="false"
                android:textColor="@color/nonchosen_button_text"
                android:textSize="12sp"
                tools:ignore="HardcodedText,TouchTargetSizeCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/paymentButton"
                android:layout_width="91dp"
                android:layout_height="35dp"
                android:background="@drawable/bg_radius_8dp"
                android:backgroundTint="@color/nonchosen_button_background"
                android:fontFamily="@font/lufga_bold"
                android:text="@string/payment_button_text"
                android:textAllCaps="false"
                android:textColor="@color/nonchosen_button_text"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/rentRecordButton"
                android:layout_width="91dp"
                android:layout_height="35dp"
                android:background="@drawable/bg_radius_8dp"
                android:backgroundTint="@color/rent_record_button_background"
                android:fontFamily="@font/lufga_bold"
                android:text="@string/rent_record_button_text"
                android:textAllCaps="false"
                android:textColor="@color/chosen_button_text"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rent_record_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@id/changepagebutton">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</RelativeLayout>